--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             // Section 1: Conclusion
             const [safetyStatement, setSafetyStatement] = useState('');
-            const [processSum mary, setProcessSummary] = useState('');
+            const [processSummary, setProcessSummary] = useState('');
             const [residualRisk, setResidualRisk] = useState('');
 
             // Section 2: Users, Uses, Environments
